--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
      <meta charset="utf-8">
      <title>app.creation</title>
+     <link rel="stylesheet" href="./fonts.css">
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto">
      <link rel="stylesheet" href="styles.css">
 </head>
