--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     <h1 class="main__title">
       Building an App
       <span class="main__title-text_highlight">
-        Without Design Expertise?
+        Without Design Expertise
       </span>
+      ?
     </h1>
     <p class="main__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
     <a class="main__button" href="#">
