Работа над адаптацией под мобильное устройство

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
        <a class="menu__item" href="#">blog</a>
        <a class="menu__item" href="#">contact us</a>
      </nav>
+     <div class="menu__icon">
+     </div>
  </header><!--
 --><section class="main">
   <main>
