Создание окна для моб. версии

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
  <header class="header">
    <div class="logo"></div>
-     <nav class="menu">
+     <nav class="menu" id="menu">
        <a class="menu__item" href="#">start</a>
        <a class="menu__item menu__item_active" href="#">services</a>
        <a class="menu__item" href="#">about</a>
        <a class="menu__item" href="#">blog</a>
        <a class="menu__item" href="#">contact us</a>
      </nav>
-     <div class="menu__icon">
-     </div>
+     <a class="menu__icon" href="#menu">
+     </a>
  </header><!--
 --><section class="main">
   <main>
