Работа над окном меню

--- a/index.html
+++ b/index.html
@@ -15,15 +15,25 @@
 
  <header class="header">
    <div class="logo"></div>
-     <nav class="menu" id="menu">
+     <nav class="menu" id="menu__window">
+       <a href="#" class="menu__close">
+       </a>
        <a class="menu__item" href="#">start</a>
        <a class="menu__item menu__item_active" href="#">services</a>
        <a class="menu__item" href="#">about</a>
        <a class="menu__item" href="#">blog</a>
        <a class="menu__item" href="#">contact us</a>
      </nav>
-     <a class="menu__icon" href="#menu">
+  <!--<div class="menu__window" id="menu__window">
+       <a class="menu__item" href="#">start</a>
+       <a class="menu__item" href="#">services</a>
+       <a class="menu__item" href="#">about</a>
+       <a class="menu__item" href="#">blog</a>
+       <a class="menu__item" href="#">contact us</a>
+     </div> -->
+     <a class="menu__icon" href="#menu__window">
      </a>
+
  </header><!--
 --><section class="main">
   <main>
@@ -42,6 +52,7 @@
   </div>
 </section>
 </div>
+
 <div class="dots">
 </div>
 </body>
