--- a/index.html
+++ b/index.html
@@ -24,13 +24,6 @@
        <a class="menu__item" href="#">blog</a>
        <a class="menu__item" href="#">contact us</a>
      </nav>
-  <!--<div class="menu__window" id="menu__window">
-       <a class="menu__item" href="#">start</a>
-       <a class="menu__item" href="#">services</a>
-       <a class="menu__item" href="#">about</a>
-       <a class="menu__item" href="#">blog</a>
-       <a class="menu__item" href="#">contact us</a>
-     </div> -->
      <a class="menu__icon" href="#menu__window">
      </a>
 
@@ -42,7 +35,7 @@
       <span class="main__title-text_highlight">
         Without Design Expertise</span>?
     </h1>
-    <p class="main__subtitle">I help tech startups design better digital products without hiring a&nbsp;full-time designer</p>
+    <p class="main__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
     <a class="main__button" href="#">
       Schedule free consultation
     </a>
