Штрихи адаптивной верстки

--- a/index.html
+++ b/index.html
@@ -15,27 +15,35 @@
 
  <header class="header">
    <div class="logo"></div>
+   <input id="checkbox" type="checkbox">
+
+   <label for="checkbox">
+     <a class="menu__icon"></a>
+   </label>
+
      <nav class="menu" id="menu__window">
-       <a href="#" class="menu__close">
-       </a>
+       <label class="" for="checkbox">
+          <a class="menu__close"></a>
+       </label>
+
        <a class="menu__item" href="#">start</a>
        <a class="menu__item menu__item_active" href="#">services</a>
        <a class="menu__item" href="#">about</a>
        <a class="menu__item" href="#">blog</a>
        <a class="menu__item" href="#">contact us</a>
+
      </nav>
-     <a class="menu__icon" href="#menu__window">
-     </a>
+
 
  </header><!--
 --><section class="main">
   <main>
     <h1 class="main__title">
-      Building an App
+      Building&nbsp;an&nbsp;App
       <span class="main__title-text_highlight">
-        Without Design Expertise</span>?
+        Without&nbsp;Design Expertise</span>?
     </h1>
-    <p class="main__subtitle">I help tech startups design better digital products without hiring a full-time designer</p>
+    <p class="main__subtitle">I&nbsp;help&nbsp;tech&nbsp;startups&nbsp;design&nbsp;better digital products&nbsp;without&nbsp;hiring&nbsp;a full&#8209;time&nbsp;designer</p>
     <a class="main__button" href="#">
       Schedule free consultation
     </a>
